test/zinc_source/compile_errors/callables/18_spawn_captured_bound_method.zn
// expected-error: closure captures are not transport-safe for spawn
struct Counter {
    count: 0

    fn inc() {
        self.count = self.count + 1
    }
}

fn main() {
    c = Counter {}
    step = c.inc
    worker = fn() {
        step()
    }
    spawn worker()
}

